[package]
name = "udp-echo"
version = "0.1.0"
authors = ["Anton Patrushev <apatrushev@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-rt = "1"
bytes = "0.5"
futures-util = "0.3"
tokio = { version = "0.2", default-features = false, features = ["net"] }
tokio-util = { version = "0.3", default-features = false, features = ["codec", "udp"] }
